--- a/styles/highlightjs-theme.css
+++ b/styles/highlightjs-theme.css
@@ -7,13 +7,13 @@
   (prefers-color-scheme: light);
 
 @media (prefers-color-scheme: light) {
-  .hljs {
-    background-color: #f8f8f8;
+  code.hljs {
+    background: #f8f8f8;
   }
 }
 
 @media (prefers-color-scheme: dark) {
-  .hljs {
-    background-color: #1e1e1e;
+  code.hljs {
+    background: #1e1e1e;
   }
 }
